--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
 
       <header>
-        <h1>Web recorder</h1>
+        <h1>smt</h1>
       </header>
 
       <section class="main-controls">
