--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="wrapper">
 
-      <p class="bulb">Online</p>
+      <p class="bulb"></p>
       <header>
         <h1>Audio Record By App (A.R.B.A.)</h1>
       </header>
