--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       <p>Icon courtesy of <a href="http://findicons.com/search/microphone">Find Icons</a>. Thanks to <a href="http://soledadpenades.com/">Sole</a> for the Oscilloscope code!</p>
     </aside>
     <script src="https://cdn.jsdelivr.net/npm/idb@7/build/umd.js"></script>
+    <script src="scripts/setup-db.js"></script>
     <script src="scripts/app.js"></script>
 
   </body>
