--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <p class="bulb">bulb</p>
       <header>
         <h1>Audio Record By App (A.R.B.A.)</h1>
-        <button id="idic">Demo</button>
+        <button id="sync-btn">🔄</button>
       </header>
 
       <section class="main-controls">
