--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <header>
         <h1>Audio Record By App (A.R.B.A.)</h1>
         <button id="sync-btn">🔄</button>
+        <button id="empty-btn">🔄</button>
       </header>
 
       <section class="main-controls">
