--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
 
       <header>
         <h1>Audio Record By App (A.R.B.A.)</h1>
-        <button id="sync-btn">🔄</button>
-        <button id="empty-btn">🔄</button>
+        <div class="buttons">
+          <button id="sync-btn">🔄</button>
+          <button id="empty-btn">🔄</button>
+        </div>
       </header>
 
       <section class="main-controls">
         <canvas class="visualizer" height="60px"></canvas>
-        <div id="buttons">
+        <div class="buttons">
           <button class="record">Record</button>
           <button class="stop">Stop</button>
         </div>
