--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Web dictaphone</title>
+    <title>B.R.A.A.H.</title>
     <link href="styles/app.css" rel="stylesheet" type="text/css">
   </head>
   <body>
@@ -11,7 +11,7 @@
     <div class="wrapper">
 
       <header>
-        <h1>Audio Record By App (A.R.B.A.)</h1>
+        <h1>Blade Record Audio App: Helicopters</h1>
         <div class="buttons">
           <button id="sync-btn">🔄</button>
           <button id="empty-btn">🔄</button>
