--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="wrapper">
 
       <header>
-        <h1>Blade Record Audio App: Helicopters (B.R.A.A.H)</h1>
-        <div class="buttons">
+        <h1>Blade Record Audio App: Helicopter (B.R.A.A.H.)</h1>
+        <div id="nah">
           <button id="sync-btn">🔄</button>
           <button id="empty-btn">🔄</button>
         </div>
@@ -20,7 +20,7 @@
 
       <section class="main-controls">
         <canvas class="visualizer" height="60px"></canvas>
-        <div class="buttonsLow">
+        <div id="buttons">
           <button class="record">Record</button>
           <button class="stop">Stop</button>
         </div>
