--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
       <header>
         <h1>Blade Record Audio App: Helicopter (B.R.A.A.H.)</h1>
-        <div id="nah">
+        <div>
           <button id="sync-btn">🔄</button>
-          <button id="empty-btn">🔄</button>
+          <button id="empty-btn"><i class="fa fa-trash"></i></button>
         </div>
       </header>
 
