--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Blade Record Audio App: Helicopter (B.R.A.A.H.)</h1>
         <div>
           <button id="sync-btn">🔄</button>
-          <button id="empty-btn">🗑</button>
+          <button id="empty-btn">🗑️</button>
         </div>
       </header>
 
