--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
 
       <header>
-        <h1><b>B</b>lade Record Audio App: Helicopter (B.R.A.A.H.)</h1>
+        <h1><b>B</b>lade <b>R</b>ecord <b>A</b>udio <b>A</b>pp: <b>H</b>elicopter (B.R.A.A.H.)</h1>
         <div>
           <button id="sync-btn">🔄</button>
           <button id="empty-btn">🗑️</button>
