--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <canvas class="visualizer" height="60px"></canvas>
         <div id="buttons">
           <button class="record">▶ Record</button>
-          <button class="stop">⏸️ Stop</button>
+          <button class="stop">🛑 Stop</button>
         </div>
       </section>
 
